FIXED CODECHEF MULTIPLE SOLUTION ,,,ADDED FEATURE OF SHOWWING AC SOLUTION

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,8 +34,8 @@ file.reference.jsoup-1.10.2.jar=/home/hexnor/Downloads/jsoup-1.10.2.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.jsoup-1.10.2.jar}:\
-    ${file.reference.jsoup-1.10.2-javadoc.jar}
+    ${file.reference.jsoup-1.10.2-javadoc.jar}:\
+    ${file.reference.jsoup-1.10.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
